<resources>
    <string name="app_name">ShoeStore</string>
    <string name="fragment_splash">Fragment Splash</string>
    <string name="fragment_login">Fragment login</string>
    <string name="splash_title">Comfort is \neverything</string>
    <string name="splash_description">Find the best shoes for \ncomfort in your daily activities</string>
    <string name="splash_shoe">Splash Shoe</string>

    <string name="email">Email</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="login_existing_account">Logging in with an existing account</string>
    <string name="shoe">Shoe</string>
    <string name="shoe_item">Shoe Item</string>
    <string name="shoe_description">Shoe Description</string>
    <string name="onboarding_image">OnBoarding Image</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="log_out">Log Out</string>

    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add_shoe">Add Shoe</string>
    <string name="empty_shoes">Empty Shoes</string>
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="for_example_nike">For example: Nike</string>
    <string name="enter_shoe_description">Enter shoe description</string>

    <string name="name_is_required">Name is required</string>
    <string name="company_is_required">Company is required</string>
    <string name="size_is_required">Size is required</string>
    <string name="description_is_required">Description is required</string>
</resources>