<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="splashViewModel"
            type="com.devhch.shoestore.ui.splash.SplashFragment" />
    </data>

    <!-- I used LinearLayout here to align children vertically. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_back"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.splash.SplashFragment">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space40"
            android:paddingEnd="@dimen/space40"
            android:src="@drawable/splash_shoe"
            android:contentDescription="@string/splash_shoe" />

        <TextView
            android:id="@+id/text_splash_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space8"
            android:layout_marginTop="@dimen/space8"
            android:layout_marginEnd="@dimen/space8"
            android:layout_marginBottom="@dimen/space20"
            android:fontFamily="@font/univia_pro_regular"
            android:text="@string/splash_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/text_splash_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space8"
            android:layout_marginTop="@dimen/space8"
            android:layout_marginEnd="@dimen/space8"
            android:layout_marginBottom="@dimen/space20"
            android:fontFamily="@font/univia_pro_regular"
            android:text="@string/splash_description"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20" />


    </LinearLayout>
</layout>